# knowledge-base

./: package.json
.claude/skills/tauri-packaging/: SKILL.md
.codex/: config.toml  hooks.json
.github/workflows/: android.yml  release.yml
docs/tasks/: mobile-migration-tasks.md  sync-refactor-tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: ai.rs  app_lock.rs  attachment.rs  export.rs  mcp.rs  mobile_update.rs  mod.rs  notes.rs  sync.rs  sync_v1.rs  tags.rs
src-tauri/src/database/: ai.rs  links.rs  mod.rs  note_attachments.rs  notes.rs  projects.rs  schema.rs  tags.rs  task_categories.rs  tasks.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai.rs  app_lock.rs  daily.rs  export_html.rs  import.rs  import_attachments.rs  mod.rs  note.rs  skills.rs  sync.rs  sync_scheduler.rs  sync_v1_scheduler.rs  tag.rs  webdav.rs
src-tauri/src/services/sync_v1/: backend.rs  backend_local.rs  backend_webdav.rs  conflicts.rs  manifest.rs  pull.rs  push.rs
src/components/: QuickCaptureAsrModal.tsx
src/components/ai/: DraftNoteModal.tsx
src/components/applock/: AppLockGate.tsx  AppLockScreen.tsx  AppLockSection.tsx
src/components/config-share/: ImportConfigModal.tsx
src/components/editor/: CompareClipboardButton.tsx  CompareNotesButton.tsx  DiffMergeModal.tsx  FigureExtension.ts  ImageResizeNodeView.tsx  NoteComparePicker.tsx  TextStyleExtras.ts  TiptapEditor.tsx  WikiLinkDecoration.ts  markdownDiffUtil.ts  useEditorContextMenu.tsx
src/components/layout/: ActivityBar.tsx  AppLayout.tsx  TabBar.tsx
src/components/layout/panels/: NotesPanel.tsx  TagsPanel.tsx
src/components/preview/: AttachmentPreviewModal.tsx  DocxPreview.tsx  TextPreview.tsx  XlsxPreview.tsx
src/components/settings/: EditorHighlightShortcutRow.tsx  SyncSection.tsx  SyncV1Section.tsx
src/components/tasks/: CreateTaskModal.tsx  TaskCategoryManageModal.tsx
src/components/ui/: RecommendCards.tsx  ShortcutsPanel.tsx
src/lib/: configShare.ts  exportPdf.ts  printNote.ts  tagTree.ts
src/lib/api/: index.ts
src/lib/shortcuts/: registry.ts
src/pages/ai/: index.tsx
src/pages/home/: index.tsx
src/pages/notes/: editor.tsx  index.tsx
src/pages/prompts/: index.tsx
src/pages/settings/: index.tsx
src/pages/tasks/: index.tsx
src/store/: attachmentPreview.ts  index.ts
src/styles/: global.css  themes.css
src/theme/: tokens.ts
src/types/: index.ts
